Fix z-index for demo

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -155,6 +155,7 @@
     user-select: none;
     box-sizing: border-box;
     padding: 1em 1.15em;
+    z-index: 50;
 
     &:not(.card--show) {
       display: none;
